# Tiny-Lisp-Interpreter

./: .gitignore  LICENSE.txt  README.md  TODO.md  pyproject.toml
experiments/: lisp-interpreter.ipynb
src/: lisp_evaluator.py  lisp_interpreter.py  lisp_parser.py  lisp_tokenizer.py  main.py
src/operations/: add.py  multiply.py  operation_argument_error.py  substract.py
src/tiny_lisp_interpreter/: __about__.py  __main__.py
src/tiny_lisp_interpreter/cli/: __init__.py
tests/: __init__.py  test_add.py  test_evaluate.py  test_multiply.py  test_parse.py  test_substract.py  test_tokenize.py
