[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-lisp-interpreter"
dynamic = ["version"]
description = 'A tiny Lisp interpreter in Python ðŸ'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["lisp", "interpreter", "lisp-interpreter", "tiny"]
authors = [
  { name = "Adrien-LUDWIG", email = "ludwig.adrien0@gmail.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Interpreters",
]
dependencies = [
  "click",
]

[project.urls]
Documentation = "https://github.com/Adrien-LUDWIG/Tiny-Lisp-Interpreter#readme"
Issues = "https://github.com/Adrien-LUDWIG/Tiny-Lisp-Interpreter/issues"
Source = "https://github.com/Adrien-LUDWIG/Tiny-Lisp-Interpreter"

[project.scripts]
tiny-lisp-interpreter = "tiny_lisp_interpreter.cli:tiny_lisp_interpreter"

[tool.hatch.version]
path = "src/tiny_lisp_interpreter/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/tiny_lisp_interpreter tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["tiny_lisp_interpreter"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["tiny_lisp_interpreter", "tests"]
branch = true
parallel = true
omit = [
  "src/tiny_lisp_interpreter/__about__.py",
]

[tool.coverage.paths]
tiny_lisp_interpreter = ["src/tiny_lisp_interpreter", "*/tiny-lisp-interpreter/src/tiny_lisp_interpreter"]
tests = ["tests", "*/tiny-lisp-interpreter/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
